--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body class="bg-gray-100 antialiased">
 
@@ -179,8 +179,8 @@
     <div id="edit-member-modal" class_name="modal ...">...</div>
 
 
-    <script type="module" src="../js/app.js"></script>
-    <script type="module" src="../js/ui/dashboard.js"></script>
+    <script type="module" src="../assets/js/app.js"></script>
+    <script type="module" src="../assets/js/ui/dashboard.js"></script>
 
 </body>
 </html>
