--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="bg-gray-100 antialiased">
 
@@ -52,6 +53,6 @@
             lucide.createIcons();
         });
     </script>
-    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="assets/js/auth.js"></script>
 </body>
 </html>
