--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             lucide.createIcons();
         });
     </script>
-    <script type="module" src="assets/js/auth.js"></script>
+        <script src="config.js"></script>
+        <script type="module" src="assets/js/api.js"></script>
+        <script type="module" src="assets/js/auth.js"></script>
 </body>
 </html>
