--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -115,7 +115,7 @@
                                 </div>
                                 <div>
                                     <p class="text-gray-500 text-sm">Projetos Ativos</p>
-                                    <p class="text-2xl font-bold text-gray-800">15</p>
+                                    <p id="active-projects-kpi" class="text-2xl font-bold text-gray-800">—</p>
                                 </div>
                             </div>
                             <div data-role="director vp president" class="bg-white p-6 rounded-xl shadow-md flex items-center space-x-4 hidden">
@@ -124,7 +124,7 @@
                                 </div>
                                 <div>
                                     <p class="text-gray-500 text-sm">Férias p/ Aprovação</p>
-                                    <p class="text-2xl font-bold text-gray-800">3</p>
+                                    <p id="pending-vacations-kpi" class="text-2xl font-bold text-gray-800">—</p>
                                 </div>
                             </div>
                             <div data-role="vp president" class="bg-white p-6 rounded-xl shadow-md flex items-center space-x-4 hidden">
@@ -133,7 +133,7 @@
                                 </div>
                                 <div>
                                     <p class="text-gray-500 text-sm">Receita (Mês)</p>
-                                    <p class="text-2xl font-bold text-gray-800">R$ 18k</p>
+                                    <p id="revenue-kpi" class="text-2xl font-bold text-gray-800">—</p>
                                 </div>
                             </div>
                             <div data-role="member" class="bg-white p-6 rounded-xl shadow-md flex items-center space-x-4 hidden">
@@ -151,20 +151,33 @@
                                 </div>
                                 <div>
                                     <p class="text-gray-500 text-sm">Férias Agendadas</p>
-                                    <p class="text-2xl font-bold text-gray-800">5</p>
+                                    <p id="scheduled-vacations-kpi" class="text-2xl font-bold text-gray-800">—</p>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-1 lg:grid-cols-5 gap-6 mt-6">
-                            <div class="lg:col-span-3 bg-white p-6 rounded-xl shadow-md">
-                                <h3 class="text-lg font-semibold text-gray-700 mb-4">Status dos Projetos</h3>
-                                <canvas id="projectStatusChart"></canvas>
+                        <div class="w-full bg-white p-4 rounded-xl shadow-md">
+                            <h3 class="text-lg font-semibold text-gray-700 mb-4">Feedback Bimestral</h3>
+
+                            <div class="relative w-full" style="padding-top: 60%; /* controla o aspect ratio */">
+                                <iframe 
+                                    src="https://lookerstudio.google.com/embed/reporting/de0dbb5d-5faf-4421-a0c4-7cb0cf07414c/page/7mRYF"
+                                    class="absolute top-0 left-0 w-full h-full rounded-xl"
+                                    style="border:0;"
+                                    allowfullscreen>
+                                </iframe>
                             </div>
-                            <div class="lg:col-span-2 bg-white p-6 rounded-xl shadow-md">
-                                <h3 class="text-lg font-semibold text-gray-700 mb-4">Membros por Diretoria</h3>
-                                <canvas id="membersChart"></canvas>
+                        <div class="w-full bg-white p-4 rounded-xl shadow-md">
+                            <h3 class="text-lg font-semibold text-gray-700 mb-4">Censo de Perfil</h3>
+                            <div class="relative w-full" style="padding-top: 60%; /* controla o aspect ratio */">
+                                <iframe 
+                                    src="https://lookerstudio.google.com/embed/reporting/86c9b9fd-58eb-41b2-90fd-e323091408e4/page/7mRYF"
+                                    class="absolute top-0 left-0 w-full h-full rounded-xl"
+                                    style="border:0;"
+                                    allowfullscreen>
+                                </iframe>
                             </div>
+                        </div>
                         </div>
                     </div>
                     
