--- a/assets/pages/attendance.html
+++ b/assets/pages/attendance.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="bg-gray-100 antialiased">
 
@@ -27,28 +27,28 @@
                     </div>
                 </div>
                 <nav id="sidebar-nav" class="flex-grow p-4 space-y-2">
-                    <a href="../assets/pages/dashboard.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg">
+                    <a href="../pages/dashboard.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg">
                         <i data-lucide="layout-dashboard" class="w-5 h-5 mr-3"></i> Dashboard
                     </a>
-                     <a href="../assets/pages/profile.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                     <a href="../pages/profile.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="user" class="w-5 h-5 mr-3"></i> Meu Perfil
                     </a>
-                    <a href="../assets/pages/forms.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                    <a href="../pages/forms.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="file-text" class="w-5 h-5 mr-3"></i> Formulários
                     </a>
-                    <a href="../assets/pages/feedback.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                    <a href="../pages/feedback.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="message-square-warning" class="w-5 h-5 mr-3"></i> Reclame para GG
                     </a>
-                    <a href="../assets/pages/vacation.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                    <a href="../pages/vacation.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="calendar-check" class="w-5 h-5 mr-3"></i> Solicitar Férias
                     </a>
-                    <a href="../assets/pages/tasks.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                    <a href="../pages/tasks.html" data-role="all" class="nav-link flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="clipboard-list" class="w-5 h-5 mr-3"></i> Tarefas e Projetos
                     </a>
-                     <a href="../assets/pages/attendance.html" data-role="director vp president" class="nav-link hidden flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                     <a href="../pages/attendance.html" data-role="director vp president" class="nav-link hidden flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="check-square" class="w-5 h-5 mr-3"></i> Presença
                     </a>
-                    <a href="../assets/pages/members.html" data-role="director vp president" class="nav-link hidden flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
+                    <a href="../pages/members.html" data-role="director vp president" class="nav-link hidden flex items-center px-4 py-2.5 rounded-lg hover:bg-gray-700 transition-colors">
                         <i data-lucide="users-2" class="w-5 h-5 mr-3"></i> Gerenciar Membros
                     </a>
                 </nav>
@@ -120,8 +120,8 @@
     <div id="edit-member-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
     <div id="birthday-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
 
-    <script type="module" src="../assets/js/app.js"></script>
-    <script type="module" src="../assets/js/ui/attendance.js"></script>
+    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="../js/ui/attendance.js"></script>
 
 </body>
 </html>
