adicao do auth.js em todos os html

--- a/assets/pages/feedback.html
+++ b/assets/pages/feedback.html
@@ -148,4 +148,8 @@
     <script type="module" src="../assets/js/ui/feedback.js"></script>
 
 </body>
+<script type="module">
+    import { checkAuth } from '../assets/js/auth.js';
+    checkAuth();
+</script>
 </html>
