--- a/assets/pages/forms.html
+++ b/assets/pages/forms.html
@@ -157,4 +157,8 @@
     <script type="module" src="../assets/js/ui/forms.js"></script>
 
 </body>
+<script type="module">
+    import { checkAuth } from '../assets/js/auth.js';
+    checkAuth();
+</script>
 </html>
