--- a/assets/pages/members.html
+++ b/assets/pages/members.html
@@ -192,4 +192,8 @@
     <script type="module" src="../assets/js/ui/members.js"></script>
 
 </body>
+<script type="module">
+    import { checkAuth } from '../assets/js/auth.js';
+    checkAuth();
+</script>
 </html>
