--- a/assets/pages/vacation.html
+++ b/assets/pages/vacation.html
@@ -158,4 +158,8 @@
     <script type="module" src="../assets/js/ui/vacation.js"></script>
 
 </body>
+<script type="module">
+    import { checkAuth } from '../assets/js/auth.js';
+    checkAuth();
+</script>
 </html>
