--- a/assets/pages/tasks.html
+++ b/assets/pages/tasks.html
@@ -135,4 +135,8 @@
     <script type="module" src="../assets/js/ui/tasks.js"></script>
 
 </body>
+<script type="module">
+    import { checkAuth } from '../assets/js/auth.js';
+    checkAuth();
+</script>
 </html>
