--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -31,11 +31,11 @@
             <div id="sidebar-placeholder"></div>
 
 <script>
-    fetch("/assets/components/sidebar.html")
+    fetch(infobio-internal/assets/components/sidebar.html)
         .then(res => res.text())
         .then(html => {
             document.getElementById("sidebar-placeholder").innerHTML = html;
-        });
+        })
 </script>
 
 
