--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -100,7 +100,7 @@
                                 <div class="lg:col-span-1 space-y-6">
                                      <div class="bg-white p-6 rounded-xl shadow-md">
                                         <h3 class="text-xl font-bold text-gray-800 mb-4">Meus Dados</h3>
-                                        <div class="space-y-4">
+                                                                                <div class="space-y-4">
                                             <div>
                                                 <label for="profile-name" class="block text-sm font-medium text-gray-700">Nome Completo</label>
                                                 <input type="text" id="profile-name" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md focus:ring-green-500 focus:border-green-500">
@@ -110,8 +110,9 @@
                                                 <input type="date" id="profile-dob" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md focus:ring-green-500 focus:border-green-500">
                                             </div>
                                             <div>
-                                                <label for="profile-photo-url" class="block text-sm font-medium text-gray-700">URL da Foto de Perfil</label>
-                                                <input type="text" id="profile-photo-url" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md focus:ring-green-500 focus:border-green-500" placeholder="https://exemplo.com/foto.jpg">
+                                                <label for="profile-photo-url" class="block text-sm font-medium text-gray-700">Foto de Perfil (Gerenciada pelo Google)</label>
+                                                <!-- O JS vai desabilitar este campo automaticamente -->
+                                                <input type="text" id="profile-photo-url" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md focus:ring-green-500 focus:border-green-500" placeholder="Carregando...">
                                             </div>
                                             <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-green-600 hover:bg-green-700 transition-colors">
                                                 Salvar Alterações
@@ -147,12 +148,12 @@
     <div id="edit-member-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
     <div id="birthday-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
 
-    <script type="module" src="../assets/js/app.js"></script>
-    <script type="module" src="../assets/js/ui/profile.js"></script>
+    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="../js/ui/profile.js"></script>
 
 </body>
 <script type="module">
-    import { checkAuth } from '../assets/js/auth.js';
+    import { checkAuth } from '../js/auth.js';
     checkAuth();
 </script>
 </html>
