--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -191,13 +191,13 @@
     <div id="add-member-modal" class_name="modal ...">...</div>
     <div id="edit-member-modal" class_name="modal ...">...</div>
 
-
-    <script type="module" src="../assets/js/app.js"></script>
-    <script type="module" src="../assets/js/ui/dashboard.js"></script>
+    <script src="../../config.js"></script>
+    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="../js/ui/dashboard.js"></script>
 
 </body>
 <script type="module">
-    import { checkAuth } from '../assets/js/auth.js';
+    import { checkAuth } from '../js/auth.js';
     checkAuth();
 </script>
 </html>
