--- a/assets/pages/members.html
+++ b/assets/pages/members.html
@@ -195,12 +195,13 @@
     </div>
     <div id="birthday-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
 
-    <script type="module" src="../assets/js/app.js"></script>
-    <script type="module" src="../assets/js/ui/members.js"></script>
+    <script src="../../config.js"></script>
+    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="../js/ui/members.js"></script>
 
 </body>
 <script type="module">
-    import { checkAuth } from '../assets/js/auth.js';
+    import { checkAuth } from '../js/auth.js';
     checkAuth();
 </script>
 </html>
