--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -148,6 +148,7 @@
     <div id="edit-member-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
     <div id="birthday-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden modal-enter-from">...</div>
 
+    <script src="../../config.js"></script>
     <script type="module" src="../js/app.js"></script>
     <script type="module" src="../js/ui/profile.js"></script>
 
