--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="w-full max-w-md p-8 space-y-8 bg-white rounded-2xl shadow-lg">
             <div class="text-center">
                 <div class="flex items-center justify-center mb-4 text-3xl font-bold text-gray-800">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-green-600 mr-2"><path d="M20.42 4.58a5.4 5.4 0 0 0-7.65 0l-.76.77-.76-.77a5.4 5.4 0 0 0-7.65 0C1.46 6.7 1.33 10.28 4 13l8 8 8-8c2.67-2.72 2.54-6.3.42-8.42z"></path><path d="M12 5.5V13.5"></path><path d="M16 9.5H8"></path></svg>
+                    <img src="assets/images/julinu.png" class="h-20 w-auto mr-2 align-baseline">
                     <span>InfoBio Jr.</span>
                 </div>
                 <h2 class="text-2xl font-semibold text-gray-700">Acesso ao Sistema Interno</h2>
