--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="w-full max-w-md p-8 space-y-8 bg-white rounded-2xl shadow-lg">
             <div class="text-center">
                 <div class="flex items-center justify-center mb-4 text-3xl font-bold text-gray-800">
-                    <img src="assets/images/julinu.png" class="h-20 w-auto mr-2 align-baseline">
+                    <img src="/infobio-internal/assets/images/julinu.png" class="h-20 w-auto mr-2 align-baseline">
                     <span>InfoBio Jr.</span>
                 </div>
                 <h2 class="text-2xl font-semibold text-gray-700">Acesso ao Sistema Interno</h2>
