--- a/assets/pages/vacation.html
+++ b/assets/pages/vacation.html
@@ -3,13 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script>
-        // Verifica se existe usuário na sessão. Se não, chuta para o login imediatamente.
-        // O caminho '../../index.html' assume que você está em assets/pages/
-        if (!sessionStorage.getItem('loggedInUser')) {
-            window.location.replace('../../index.html');
-        }
-    </script>
+
     <title>Solicitar Férias | InfoBio Jr.</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
@@ -93,7 +87,7 @@
                 </header>
 
                 <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-100 p-6">
-                    
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkS44iGOWb80uVMDugIQEOUJPDoglww-f5UKJg_GsxzJkRnA/viewform?embedded=true" width="640" height="2014" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
                     <div id="vacation-page" class="page-content">
                         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
                             <div class="lg:col-span-1 bg-white p-8 rounded-xl shadow-md">
