forms de ferias via iframe

--- a/assets/pages/vacation.html
+++ b/assets/pages/vacation.html
@@ -93,7 +93,10 @@
                 </header>
 
                 <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-100 p-6">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkS44iGOWb80uVMDugIQEOUJPDoglww-f5UKJg_GsxzJkRnA/viewform?embedded=true" width="640" height="2014" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkS44iGOWb80uVMDugIQEOUJPDoglww-f5UKJg_GsxzJkRnA/viewform?embedded=true" 
+                                    class="absolute top-0 left-0 w-full h-full rounded-xl"
+                                    style="border:0;"
+                                    allowfullscreen>>Carregando…</iframe>
                     <div id="vacation-page" class="page-content">
                         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
                             <div class="lg:col-span-1 bg-white p-8 rounded-xl shadow-md">
