--- a/assets/pages/vacation.html
+++ b/assets/pages/vacation.html
@@ -93,10 +93,6 @@
                 </header>
 
                 <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-100 p-6">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkS44iGOWb80uVMDugIQEOUJPDoglww-f5UKJg_GsxzJkRnA/viewform?embedded=true" 
-                                    class="absolute top-0 left-0 w-full h-full rounded-xl"
-                                    style="border:0;"
-                                    allowfullscreen>>Carregando…</iframe>
                     <div id="vacation-page" class="page-content">
                         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
                             <div class="lg:col-span-1 bg-white p-8 rounded-xl shadow-md">
@@ -120,7 +116,15 @@
                                </form>
                                <p id="vacation-success" class="mt-4 text-center text-green-600 hidden">Solicitação enviada para aprovação!</p>
                             </div>
-                            <div class="lg:col-span-2 bg-white p-8 rounded-xl shadow-md">
+                            <div class="lg:col-span-2 bg-white p-0 rounded-xl shadow-md">
+                            <iframe 
+                                src="https://docs.google.com/forms/d/e/1FAIpQLSdkS44iGOWb80uVMDugIQEOUJPDoglww-f5UKJg_GsxzJkRnA/viewform?embedded=true"
+                                class="w-full h-[80vh] rounded-xl"
+                                style="border:0;"
+                                loading="lazy">
+                            </iframe>
+                            </div>
+                            <!--<div class="lg:col-span-2 bg-white p-8 rounded-xl shadow-md">
                                 <div class="flex items-center justify-between mb-6">
                                     <h2 class="text-2xl font-bold text-gray-800" id="calendar-month-year">Outubro 2025</h2>
                                     <div>
@@ -136,7 +140,7 @@
                                     <div class="flex items-center"><span class="w-3 h-3 rounded-full bg-blue-500 mr-2"></span>Projetos</div>
                                     <div class="flex items-center"><span class="w-3 h-3 rounded-full bg-green-500 mr-2"></span>Marketing</div>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                         <div data-role="director vp president" class="mt-6 bg-white p-8 rounded-xl shadow-md hidden">
                             <h3 class="text-xl font-bold text-gray-800 mb-4">Solicitações Pendentes</h3>
